# printing_service

./: README.md  manage.py  pyproject.toml  test_print.py
printing/: objects.py  services.py
printing_service/: __init__.py  asgi.py  cli_broker.py  objects.py  pycups_broker.py  services.py  settings.py  urls.py  wsgi.py
